syntax = "proto3";

package com.dislinkt;

option java_multiple_files = true;

message Profile{
  string id = 1;
}

message Empty {}

service ProfileService{
  // Server streaming - asynchronous
  rpc getFollowing(Profile) returns (stream Profile){}
  rpc getFollowers(Profile) returns (stream Profile){}
  rpc getPublicProfiles(Empty) returns (stream Profile){}
  rpc getFollowerRequests(Profile) returns (stream Profile){}
}